<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>avoid_obstacle_cpp</name>
  <version>1.0.0</version>
  <description>This package contains the Intelligent Robotics Lab's robots from URJC</description>
  <maintainer email="josemiguel.guerrero@urjc.es">Jose Miguel Guerrero</maintainer>
  <license>Apache License, Version 2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>kobuki_ros_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
